--- a/myproject/templates/new_topic.html
+++ b/myproject/templates/new_topic.html
@@ -9,11 +9,15 @@
   <li class="breadcrumb-item">
     <a href="{% url 'board_topics' board.pk %}">{{ board.name }}</a>  
   </li>
-  <li class="breadcrumb-item">New topic</li>
-
+  <li class="breadcrumb-item active">New topic!</li>
 {% endblock %}
 
 {% block content %}
- 
+  <form method="post" novalidate>
+    {% csrf_token %}
+
+    {% include 'includes/form.html' %}
+    <button type="submit" class="btn btn-success">Post</button>
+  </form>
 {% endblock %}
 
